--- a/design/rtl.cfg
+++ b/design/rtl.cfg
@@ -10,6 +10,7 @@ $design/flopenr.sv
 $design/flopr.sv
 $design/mux2.sv
 $design/mux4.sv
+$design/ram.sv
 $design/regfile.sv
 $design/arm.sv
 $design/top.sv
